# SolRaiser

./: README.md
database/: INDEX.sql  TABLE.sql
docs/: design.excalidraw
solraiser/: Anchor.toml
solraiser-backend/: .env  .gitignore  AXUM_REQUEST_HANDLING_GUIDE.md  Cargo.toml
solraiser-backend/src/: config.rs  error.rs  handlers.rs  indexer.rs  lib.rs  main.rs  models.rs  state.rs  temp.rs
solraiser-frontend/: package-lock.json  package.json  pnpm-lock.yaml
solraiser-frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
solraiser-frontend/src/app/create-campaign/: page.tsx
solraiser-frontend/src/components/: profile.tsx
solraiser-frontend/src/components/ui/: wallet-button.tsx
solraiser-frontend/src/lib/services/: create-campaign.ts
solraiser-frontend/src/lib/utils/: use-anchor-program.ts  wallet-info.ts
solraiser-frontend/src/providers/: solana-provider.tsx
solraiser/programs/solraiser/: Cargo.toml
solraiser/programs/solraiser/src/: lib.rs
solraiser/tests/: solraiser.ts
