[package]
name = "solraiser-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
solana-client = "3.1.4"
solana-sdk = "3.0.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
chrono = { version = "0.4.42", features = ["serde"] }
